<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_centerVertical="false"
    android:gravity="center_vertical"
    android:orientation="vertical"
    android:weightSum="3"
    tools:context="com.digitalmirko.explosionfieldlibrarydemo.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="3">

        <ImageView
            android:id="@+id/imageView1"
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:layout_weight="1"
            android:contentDescription="@string/greenphoneicon"
            app:srcCompat="@drawable/greenphone" />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:layout_weight="1"
            android:contentDescription="@string/bluetwittericon"
            app:srcCompat="@drawable/bluetwitter" />

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:layout_weight="1"
            android:contentDescription="@string/orangepurpleinstagramicon"
            app:srcCompat="@drawable/orangepurpleinstagram" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="10dp"
        android:textAlignment="center"
        android:weightSum="1">

        <TextView
            android:id="@+id/textView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/click_image_to_explode"
            android:textAlignment="center" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="3">

        <ImageView
            android:id="@+id/imageView4"

            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:layout_weight="1"
            android:contentDescription="@string/yellowsnapchaticon"
            app:srcCompat="@drawable/yellosnapchat" />

        <ImageView
            android:id="@+id/imageView5"
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:layout_weight="1"
            android:contentDescription="@string/redyoutubeicon"
            app:srcCompat="@drawable/redyoutube" />

        <ImageView
            android:id="@+id/imageView6"

            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:layout_weight="1"
            android:contentDescription="@string/purplephoneringingicon"
            app:srcCompat="@drawable/purplephoneringing" />

    </LinearLayout>

</LinearLayout>